# CPlusPlusTraining

./: .gitignore  new-employee-training-program.docx
Week01/: Week1.sln  week1.txt
Week01/1.1/: 1.1.cpp  1.1.vcxproj
Week01/1.2/: 1.2.cpp  1.2.vcxproj
Week01/1.3/: 1.3.cpp  1.3.vcxproj
Week01/2.1/: 2.1.cpp  2.1.vcxproj
Week01/2.2/: 2.2.cpp  2.2.vcxproj
Week01/2.3/: 2.3.cpp  2.3.vcxproj
Week01/3.1/: 3.1.cpp  3.1.vcxproj
Week01/3.2/: 3.2.cpp  3.2.vcxproj
Week01/3.3/: 3.3.cpp  3.3.vcxproj
Week01/4.1/: 4.1.cpp  4.1.vcxproj
Week01/4.2/: 4.2.cpp  4.2.vcxproj
Week01/4.3/: 4.3.cpp  4.3.vcxproj
Week01/5.1/: 5.1.cpp  5.1.vcxproj
Week01/5.2/: 5.2.cpp  5.2.vcxproj
Week01/5.3/: 5.3.cpp  5.3.vcxproj
Week01/ConsoleApplication1/: 2.2.cpp  ConsoleApplication1.vcxproj
Week01/Week1/: 1.1.cpp  Week1.vcxproj  Week1.vcxproj.filters
Week02/: Week2.sln  🧠 Practice Exercises.txt
Week02/2.2/: 2.2.cpp  2.2.vcxproj
Week02/2.3/: 2.3.cpp  2.3.vcxproj
Week02/Week2/: Week2.cpp  Week2.vcxproj
Week03/: Week3.sln  week3.txt
Week03/3.1/: 3.1.cpp  3.1.vcxproj
Week03/3.2/: 3.2.cpp  3.2.vcxproj
Week03/3.3/: 3.3.cpp  3.3.vcxproj
Week04/: Week4.sln  week4.txt
Week04/4.1/: 4.1.cpp  4.1.vcxproj
Week04/4.2/: 4.2.cpp  4.2.vcxproj  Math.h  (+1 more)
Week05/: CMakeLists.txt  Week 5 – CMake & Project Organization.txt
Week05/app/: CMakeLists.txt  main.cpp
Week05/core/: CMakeLists.txt  core.cpp
Week05/install/include/: core.h  utils.h
Week05/utils/: CMakeLists.txt  utils.cpp
Week11_12/: Library Management System.sln
Week6_10/: Week6_10  Week6_10.sln  Week6_10.txt
(+116 files in other folders)
